# spike_discrim

./: .gitignore  README.md  pyproject.toml
api/: main.py
api/routers/: ephys_eval.py  guide.py  pipeline.py  runs.py  validate.py
configs/: benchmarks.yaml  default.yaml
docs/: AFFERENT_CLUSTERING_OVERVIEW.md  DATA_HIERARCHY.md  MANIFEST.md  ORIENTATION.md  RESULTS_REAL_UNITS_2026-04-05.md  clustering_results.md  features.yaml  spike_feature_validation.yaml
frontend/: app.js  guide.html  index.html  style.css
notebooks/: clustering-sweep.ipynb  main.ipynb  osort_file_extraction.ipynb  repo_process_overview.ipynb  test.ipynb
scripts/: run_benchmark.py  run_lfpy_generation.py
src/spike_discrim/: __init__.py
src/spike_discrim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spike_discrim/adapters/: __init__.py  osort_loader.py
src/spike_discrim/benchmarking/: __init__.py  afferent_clustering.py  feature_sets.py  single_feature.py
src/spike_discrim/config/: __init__.py  loader.py
src/spike_discrim/features/: __init__.py  core_features.py  event_features.py  extraction.py
src/spike_discrim/input_layer/: __init__.py  weights.py
src/spike_discrim/io/: __init__.py  storage.py
src/spike_discrim/metrics/: __init__.py  evaluation.py
src/spike_discrim/models/: __init__.py  discriminants.py
src/spike_discrim/profiling/: __init__.py  op_counter.py
src/spike_discrim/synthetic/: __init__.py  (+2 more)
tests/: test_afferent_clustering.py  test_features.py  test_input_layer.py  test_knn_purity.py  test_osort_adapter.py
(+88 files in other folders)
